[gd_scene load_steps=5 format=3 uid="uid://pu7tauqonrgp"]

[ext_resource type="Script" path="res://ui/side_bar/side_bar.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_j7x1g"]
[ext_resource type="PackedScene" uid="uid://cffjww73hoc0w" path="res://ui/tag_buttons/tag_buttons.tscn" id="3_v0dow"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7pd5m"]
texture = ExtResource("2_j7x1g")

[node name="SideBar" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j7x1g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Filter" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter Tags"
caret_blink = true
caret_blink_interval = 0.5

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AllTags" type="GridContainer" parent="MarginContainer/VBoxContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 1

[node name="SelectedTagsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selected Tags:"

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SelectedTags" type="GridContainer" parent="MarginContainer/VBoxContainer/Panel2/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 1

[node name="TagButtons" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_v0dow")]
visible = false
layout_mode = 2

[node name="TagPreviewList" type="ItemList" parent="MarginContainer"]
visible = false
top_level = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7pd5m")

[connection signal="gui_input" from="MarginContainer/VBoxContainer/Filter" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Filter" to="." method="update_all_tags_list"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/Filter" to="." method="_on_filter_text_submitted"]
[connection signal="gui_input" from="MarginContainer/TagPreviewList" to="." method="_on_tag_preview_list_gui_input"]
